external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.h

  
  extern "C" void poroMAILx_ComputeGrad(void);
  extern "C" void poroMAILx_GetBodyVector(char * cvalue1_c, int ivalue1, double** matrix_out, int* dim1, int* dim2);
  extern "C" int poroMAILx_GetNbNodes(int ivalue);
  extern "C" int poroMAILx_GetNbElements(int ivalue);
  extern "C" void poroMAILx_IncrementStep(void);
  extern "C" int poroMAILx_WithoutRenumbering(void);
  extern "C" int poroMAILx_BandStorage(void);
  extern "C" int poroMAILx_SparseStorage(void);
  extern "C" int poroMAILx_ExplodedStorage(void);
  extern "C" int poroMAILx_DiagonalStorage(void);
  extern "C" int poroMAILx_SkylineStorage(void);
  extern "C" int poroMAILx_FullStorage(void);
  extern "C" int poroMAILx_SymmetricShape(void);
  extern "C" int poroMAILx_UnspecifiedShape(void);
  extern "C" void poroMAILx_SetMecaScalarFieldByNode(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" void poroMAILx_SetTherScalarFieldByNode(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" void poroMAILx_SetMecaScalarFieldByElement(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" void poroMAILx_SetTherScalarFieldByElement(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" int poroMAILx_GetMecaScalarFieldRank(int ibdyty, int blmty, char* name);
  extern "C" int poroMAILx_GetMecaVectorFieldRank(int ibdyty, int blmty, char* name);
  extern "C" int poroMAILx_GetTherScalarFieldRank(int ibdyty, int blmty, char* name);
  extern "C" int poroMAILx_GetTherVectorFieldRank(int ibdyty, int blmty, char* name);
  extern "C" void poroMAILx_SetMecaVectorFieldByNode(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void poroMAILx_SetMecaVectorFieldByElement(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void poroMAILx_SetTherVectorFieldByNode(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void poroMAILx_SetTherVectorFieldByElement(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void poroMAILx_LoadALE(int IdBody);
  extern "C" void poroMAILx_PutBodyVector(char * cvalue1_c, int ivalue1, double * matrix_in, int dim1, int dim2);
  extern "C" double poroMAILx_ComputeResidueNorm(void);
  extern "C" void poroMAILx_GetStress(int ivalue1, double** matrix_out, int* dim1, int* dim2, int ivalue4=0);