external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.f90


      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeGrad() bind(c, name='poroMAILx_ComputeGrad')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp grad   ')
      call start_itimer(timer_id)

      call compute_bulk_poroMAILx(1)

      call stop_itimer(timer_id)

    end subroutine

    SUBROUTINE GetBodyVector(cvalue1_c,ivalue1,rvect,ivalue2,ivalue3) bind(c, name='poroMAILx_GetBodyVector')
      use overall, only: nbDIME
      IMPLICIT NONE
      character(c_char),dimension(5),intent(in) :: cvalue1_c
      integer(c_int), intent(in), value         :: ivalue1
      integer(c_int)                            :: ivalue2,ivalue3
      type(c_ptr)                               :: rvect
      !
      real(kind=c_double), dimension(:,:), pointer :: vector
      character(len=5) :: cvalue1
      integer :: i

      cvalue1 = ''
      do i=1,5
        cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
      end do

      select case( cvalue1 )
      case('P____','Pbeg_','Qint_','Qext_')
        ivalue2 = 1
      case default
        ivalue2 = nbDIME
      end select

      ivalue3 = get_N_NODE_poroMAILx(ivalue1)
      allocate(vector(ivalue2,ivalue3))
      CALL get_vector_poroMAILx(cvalue1,ivalue1,vector,ivalue2*ivalue3)

      rvect = c_loc(vector(1,1))

    END SUBROUTINE

    SUBROUTINE IncrementStep() bind(c, name='poroMAILx_IncrementStep')
      IMPLICIT NONE
       !! PURPOSE
       !!  prediction of the configuration parameter using the theta-method

       CALL increment_poroMAILx 

    END SUBROUTINE

    SUBROUTINE WithoutRenumbering() bind(c, name='poroMAILx_WithoutRenumbering')
      IMPLICIT NONE

       CALL set_without_renum_poroMAILx()

    END SUBROUTINE

    SUBROUTINE BandStorage() bind(c, name='poroMAILx_BandStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('band____')

    END SUBROUTINE

    SUBROUTINE SparseStorage() bind(c, name='poroMAILx_SparseStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('sparse__')

    END SUBROUTINE

    SUBROUTINE ExplodedStorage() bind(c, name='poroMAILx_ExplodedStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('exploded')

    END SUBROUTINE


    SUBROUTINE DiagonalStorage() bind(c, name='poroMAILx_DiagonalStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('diagonal')

    END SUBROUTINE

    SUBROUTINE SkylineStorage() bind(c, name='poroMAILx_SkylineStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('skyline_')

    END SUBROUTINE

    SUBROUTINE FullStorage() bind(c, name='poroMAILx_FullStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_poroMAILx('full____')

    END SUBROUTINE

    SUBROUTINE SymmetricShape() bind(c, name='poroMAILx_SymmetricShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_poroMAILx('sym_____')

    END SUBROUTINE

    SUBROUTINE UnspecifiedShape() bind(c, name='poroMAILx_UnspecifiedShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_poroMAILx('std_____')

    END SUBROUTINE

    !fd: fonction qui renvoie le nombre de noeuds d'un poroMAILx
    function GetNbNodes(ibdyty) bind(c, name='poroMAILx_GetNbNodes')

       implicit none
       integer(c_int),value :: ibdyty
       ! valeur de retour
       integer(c_int) :: GetNbNodes ! nombre de noeuds d un poroMAILx 

       GetNbNodes = get_N_NODE_poroMAILx(ibdyty)

    end function GetNbNodes

    !fd: fonction qui renvoie le nombre d'elements d'un poroMAILx
    function GetNbElements(ibdyty) bind(c, name='poroMAILx_GetNbElements')

       implicit none
       integer(c_int),value :: ibdyty
       ! valeur de retour
       integer(c_int) :: GetNbElements

       GetNbElements = get_nb_elements_poroMAILx(ibdyty)

    end function GetNbElements

    SUBROUTINE SetMecaScalarFieldByNode(IdBody,f_rank,f,f_size) bind(c, name='poroMAILx_SetMecaScalarFieldByNode')
      IMPLICIT NONE
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody,f_rank,f_size
      REAL(C_DOUBLE), INTENT(in), dimension(f_size) :: f
       !! PURPOSE
       !!  Update an external field on a given body
       !!  You need to set this field in your models.dat
     
       !print *,IdBody,f_rank,f_size
       !print *,f
       CALL set_meca_field_bynode(IdBody,f_rank,f_size,f)

    END SUBROUTINE
    
    SUBROUTINE SetTherScalarFieldByNode(IdBody,f_rank,f,f_size) bind(c, name='poroMAILx_SetTherScalarFieldByNode')
      IMPLICIT NONE
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody,f_rank,f_size
      REAL(C_DOUBLE), INTENT(in), dimension(f_size) :: f
       !! PURPOSE
       !!  Update an external field on a given body
       !!  You need to set this field in your models.dat
     
       !print *,IdBody,f_rank,f_size
       !print *,f
       CALL set_ther_field_bynode(IdBody,f_rank,f_size,f)

    END SUBROUTINE
    
    subroutine SetMecaScalarFieldByElem(ibdyty,f_rank,f,f_size) bind(c, name='poroMAILx_SetMecaScalarFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty, f_rank, f_size
      real(c_double), intent(in), dimension(f_size) :: f

      call set_meca_field_byelem(ibdyty,f_rank,f_size,f)

    end subroutine

    subroutine SetTherScalarFieldByElem(ibdyty,f_rank,f,f_size) bind(c, name='poroMAILx_SetTherScalarFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty, f_rank, f_size
      real(c_double), intent(in), dimension(f_size) :: f

      call set_ther_field_byelem(ibdyty,f_rank,f_size,f)

    end subroutine

    function getTherScalarFieldRank(ibdyty, iblmty, name) bind(c, name='poroMAILx_GetTherScalarFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getTherScalarFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getTherScalarFieldRank = get_ther_field_rank(ibdyty, iblmty, f_name)

    end function

    function getTherVectorFieldRank(ibdyty, iblmty, name) bind(c, name='poroMAILx_GetTherVectorFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getTherVectorFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getTherVectorFieldRank = get_ther_vfield_rank(ibdyty, iblmty, f_name)

    end function

    function getMecaScalarFieldRank(ibdyty, iblmty, name) bind(c, name='poroMAILx_GetMecaScalarFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getMecaScalarFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getMecaScalarFieldRank = get_meca_field_rank(ibdyty, iblmty, f_name)

    end function

    function getMecaVectorFieldRank(ibdyty, iblmty, name) bind(c, name='poroMAILx_GetMecaVectorFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getMecaVectorFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getMecaVectorFieldRank = get_meca_vfield_rank(ibdyty, iblmty, f_name)

    end function

    subroutine SetMecaVectorFieldByNode(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='poroMAILx_SetMecaVectorFieldByNode')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_meca_vfield_bynode(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    subroutine SetMecaVectorFieldByElem(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='poroMAILx_SetMecaVectorFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_meca_vfield_byelem(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    subroutine SetTherVectorFieldByNode(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='poroMAILx_SetTherVectorFieldByNode')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_ther_vfield_bynode(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    subroutine SetTherVectorFieldByElem(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='poroMAILx_SetTherVectorFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_ther_vfield_byelem(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    SUBROUTINE LoadALE(IdBody) bind(c, name='poroMAILx_LoadALE')
      IMPLICIT NONE
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
       !! PURPOSE
       !!  Apply ALE Formulation in fluid zone

       CALL load_ALE_poroMAILx(IdBody)

    END SUBROUTINE

    subroutine PutBodyVector(cvalue1_c, ivalue1, mat_in, dim1, dim2) bind(c, name='poroMAILx_PutBodyVector')
      implicit none
      character(c_char), intent(in), dimension(5) :: cvalue1_c
      integer(c_int)   , intent(in), value        :: ivalue1, dim1, dim2
      type(c_ptr)                  , value        :: mat_in
      !
      real(kind=8), dimension(:), pointer :: vector
      character(len=5) :: cvalue1
      integer :: i

      cvalue1 = ''
      do i=1,5
        cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
      end do

      call c_f_pointer(cptr=mat_in, fptr=vector, shape=(/dim1*dim2/))
      call put_vector_poroMAILx(cvalue1, ivalue1, vector, dim1*dim2)

    end subroutine

    function ComputeResidueNorm() bind(c, name='poroMAILx_ComputeResidueNorm')
      use timer
      implicit none
      real(c_double) :: ComputeResidueNorm
      integer(kind=4), save :: timer_id = 0
      !
      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] compResNorm ')
      call start_itimer(timer_id)

      call compute_residue_norm_poroMAILx(ComputeResidueNorm)

      call stop_itimer(timer_id)

    end function

    SUBROUTINE GetStress(ivalue1,stress,ivalue2,ivalue3,ivalue4) bind(c, name='poroMAILx_GetStress')
      use overall, only: nbDIME
      IMPLICIT NONE
      integer(c_int), intent(in), value :: ivalue1, ivalue4
      integer(c_int)                    :: ivalue2, ivalue3
      type(c_ptr)                       :: stress
      !
      real(c_double), dimension(:,:), pointer :: S

      ivalue3 = get_N_NODE_poroMAILx(ivalue1)
